--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Clear npm cache
+        run: npm cache clean --force
 
       - name: Install Node.js
         uses: actions/setup-node@v2
